<resources>
    <string name="app_name"> Warmth</string>

    <string name="PLEASE_WAIT_A_WHILE_UNTIL_THE_REQUIRED_FOOD_IS_PROVIDED">Please wait a while until the required food is provided</string>
    <string name="LOGIN">Login</string>
    <string name="CONTINUE_WITH_GOOGLE">Continue with google</string>
    <string name="CONTINUE_WITH_FACEBOOK">Continue with facebook</string>
    <string name="OR">OR</string>
    <string name="PASSWORD">Password</string>
    <string name="EMAIL">Email</string>
    <string name="KEEP_ME_LOGGED_IN">Keep Me logged in</string>
    <string name="FORGET_PASSWORD">Forgot password?</string>
    <string name="DON_T_HAVE_AN_ACCOUNT">Don\'t have an account?</string>
    <string name="CREATE_AN_ACCOUNT">Create an account</string>
    <string name="join_as_a_chef">  Chef</string>
    <string name="join_as_hungry" translatable="false">  Hungry</string>
    <string name="WELCOME">Welcome</string>
    <string name="you_have_come_to_us_as_the_sun_comes_to_light_the_world">You have come to us as the sun comes to light the world</string>
    <string name="welcome_how_are_you_wish_you_are_fine">Welcome, how are you, wish you are fine</string>
    <string name="Welcome_we_have_been_waiting_for_you_for_a_long_time">Welcome, we have been waiting for you for a long time</string>
    <string name="my_rating">My Rating?</string>
    <string name="add_the_food">Add the food..</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="about_us">About Us</string>
    <string name="logout">Logout</string>
    <string name="upload_a_video">Upload a video</string>
    <string name="Invalid_price_or_quantity">Invalid price or quantity</string>
    <string name="upload_a_picture">Upload a picture</string>
    <string name="upload_image">Upload image</string>
    <string name="the_most_wanted">the most wanted</string>
    <string name="create">Create</string>
    <string name="loading">Loading..</string>
    <string name="your_restaurant">Your restaurant</string>
    <string name="language">Language</string>
    <string name="account">Account</string>
    <string name="search">Search</string>
    <string name="android_knowledge">Android Knowledge</string>
    <string name="contact_androidknowledge_com">contact@androidknowledge.com</string>
    <string name="it_s_my_pleasure_to_extend_a_cheerful_welcome_to_you_all_your_presence_makes_us_very_happy">It\'s my pleasure to extend a cheerful welcome to you all! Your presence makes us very happy.</string>
    <string name="Language">Language</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="ads">Ads</string>
    <string name="my_menu" translatable="false">My Menu</string>
    <string name="evaluation">Evaluation</string>
    <string name="account_number">Account Number</string>
    <string name="wallet">Wallet</string>
    <string name="evaluation_your_restaurant">Evaluation your restaurant</string>
    <string name="your_menu">Your Menu</string>
    <string name="chose">Chose</string>
    <string name="order">Order</string>
    <string name="settings_account">Account Settings</string>
    <string name="location">Location</string>
    <string name="favorite_in_your_menu">Favorite in your menu</string>
    <string name="your_orders">Your orders</string>
    <string name="offers">Offers</string>
    <string name="notification">Notification</string>
    <string name="vouchers">Vouchers</string>
    <string name="name">Name</string>
    <string name="phone">Phone: </string>
    <string name="the_familiar_name">The familiar name:</string>
    <string name="the_description">Description:</string>
    <string name="chefEmail">Chef Email:</string>
    <string name="rate">Rate</string>
    <string name="the_rate">The Rate</string>
    <string name="would_you_like_to_rate_us_on_the_app_store">Would you like to rate us on the app store?</string>

    <string name="price">Price:</string>
    <string name="EMAIL_IS_REQUIRED">Email is Required</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="PHONE_IS_REQUIRED">Phone is required </string>
    <string name="PASSWORD_IS_REQUIRED">Password is required </string>
    <string name="CONFIRM_PASSWORD_IS_REQUIRED"> Confirm password is required </string>
    <string name="CONFIRM_PASSWORD_MUST_BE_8_CHARACTERS_LONG"> Confirm password must be 8 character long </string>
    <string name="send_us_an_email">Send us an email</string>
    <string name="send_a_complaint_via_email">Send a complaint via email</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="chef">Chef</string>
    <string name="hungry">Hungry</string>
    <string name="chose_the_type_of_account">Chose your account type :</string>
    <string name="ok">ok</string>
    <string name="register_like_as">Register like as :</string>
    <string name="what_will_you_upload">What will you upload?</string>
    <string name="video">Video</string>
    <string name="image">Image</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="add_from_use">Add from use :</string>
    <string name="SELECT_LANGUAGE">Select language</string>
    <string name="FULL_NAME_IS_REQUIRED">This field is required</string>
    <string name="INCORRECT_USER_NAME_OR_PASSWORD">incorrect email or password</string>
    <string name="open_nav" translatable="false">Open Navigation Drawer</string>
    <string name="close_nav" translatable="false">Close Navigation Drawer</string>
    <string name="todo">TODO</string>
    <string name="familiar_name">Familiar Name :</string>
    <string name="Will_you_allow_me_access_to_the_camera">Will you allow me access to the camera</string>
    <string name="Will_you_allow_me_access_to_photo_library">Will you allow me access to the photo library?</string>
    <string name="save">Save</string>
    <string name="quantity">Quantity:</string>
    <string name="cart">Cart</string>
    <string name="FOOD_ADDED_SUCCESSFULLY">Your food was added successfully</string>
    <string name="EMAIL_ADDRESS_IS_INVALID">Email address is invalid</string>
    <string name="EMAIL_ALREADY_REGISTERED">Email already registered</string>
    <string name="CONFIRM_PASSWORD_DOESNOT_MATCH_WITH_PASSWORD">"Confirm password doesn't match with Password"</string>
    <string name="PASSWORD_MUST_BE_8_CHARACTERS_LONG">"Password must be 8 characters long"</string>
    <string name="Correct_Format92xxxxxxxxxx">Correct Format:+962xxxxxxxx</string>
    <string name="Confirm_PASSWORD_MUST_BE_8_CHARACTERS_LONG">"Confirm Password must be 8 characters long"</string>
    <string name="INVALIDFULLNAMEONLYALPHABETICALCHARACTERSAREALLOWED">Invalid full name. Only alphabetical characters are allowed.</string>
    <string name="hungry_email">Hungry Email:</string>
    <string name="total_price">Total Price:</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="status">Status:</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="credit_card_number">Credit Card Number:</string>
    <string name="cvv">CVV</string>
    <string name="payment">Payment</string>
    <string name="choose_the_payment_method">Choose the payment method:</string>
    <string name="visa">Visa</string>
    <string name="cash">Cash</string>
    <string name="payment_by_visa">Payment by Visa</string>
    <string name="enter_credit_card_number">Enter credit card number</string>
    <string name="enter_expiry_date_mm_yy">Enter expiry date (MM/YY)</string>
    <string name="enter_cvv">Enter CVV</string>
    <string name="make_payment">Make Payment</string>
    <string name="chef_email">Chef Email:</string>
    <string name="balance">Balance:</string>
    <string name="withdraw_money">Withdraw money:</string>
    <string name="make_offers">Make offers</string>
    <string name="offers_price">Offers Price :</string>
    <string name="add_offer">Add offer</string>
    <string name="remove_from_offers">Remove from offers</string>
    <string name="offer_price">Offer Price :</string>
    <string name="open_with_google_maps">Show directions</string>
    <string name="open_location">Open location</string>
    <string name="cooking">Cooking</string>
    <string name="withdraw">withdraw</string>
    <string name="update">Update</string>
    <string name="search_here">search here..</string>
    <string name="past_password">Past Password</string>
    <string name="new_email">New Email</string>
    <string name="old_email">Old Email</string>

    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="done">Done</string>
    <string name="your_rating_on_food">Your rating on food:</string>
    <string name="submit">Submit</string>
    <string name="chef_phone">Chef phone:</string>
    <string name="delete">Delete</string>
    <string name="offer_history">Orders History</string>
    <string name="order_status">Order status:</string>
    <string name="payment_type">Payment type:</string>
    <string name="payment_method">Payment method:</string>
        <string name="completed">Completed</string>
    <string name="deposit_money">Deposit money</string>
    <string name="successfully_delivered">successfully delivered</string>
    <string name="on_my_way">on my way</string>
    <string name="is_it_paid">Is it paid?</string>
    <string name="yes">Yes</string>
    <string name="on_the_way">On the way</string>
    <string name="did_you_pay_cash">Did you pay cash?</string>
    <string name="of_course">Of course</string>

</resources>