<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home_chef"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/home" />
    <item
        android:id="@+id/search_chef"
        android:icon="@drawable/baseline_search_24"
        android:title="@string/search"
        app:showAsAction="collapseActionView"/>

    <item android:title=""/>
    <item
        android:id="@+id/wallet_chef"
        android:icon="@drawable/baseline_wallet_24"
        android:title="@string/wallet" />


    <item
        android:id="@+id/order_chefs"
        android:icon="@drawable/baseline_food_bank_24"
        android:title="@string/order" />
</menu>