<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">

        <item
            android:id="@+id/nav_settings_chef"
            android:icon="@drawable/baseline_settings_24"
            android:title="@string/settings_account"/>

        <item
            android:id="@+id/nav_share_chef"
            android:icon="@drawable/baseline_share_24"
            android:title="@string/share"/>

        <item
            android:id="@+id/send_us_an_email"
            android:icon="@drawable/baseline_share_24"
            android:title="@string/send_us_an_email"/>
           <item
        android:id="@+id/nav_logout_chef"
        android:icon="@drawable/baseline_exit_to_app_24"
        android:title="@string/logout"/>
        </menu>