<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/send_a_complaint_via_email"
            android:icon="@drawable/baseline_newspaper_24"
            android:title="@string/send_a_complaint_via_email" />

        <item
            android:id="@+id/nav_settings_hungry"
            android:icon="@drawable/baseline_settings_24"
            android:title="@string/settings_account" />

        <item
            android:id="@+id/nav_share_hungry"
            android:icon="@drawable/baseline_share_24"
            android:title="@string/share" />

    </group>
    <item android:title="">

        <menu>
            <item
                android:id="@+id/nav_logout_hungry"
                android:icon="@drawable/baseline_exit_to_app_24"
                android:title="@string/logout" />
        </menu>

    </item>

</menu>