<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@color/white"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/order_contener"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="15dp"
        app:cardElevation="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/order_image_food"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/food" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingBottom="18dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/familiar_name"
                        android:textColor="@color/green" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/price"
                        android:textColor="@color/green" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/hungry_email"
                        android:textColor="@color/green" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/quantity"
                        android:textColor="@color/green" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/total_price"
                        android:textColor="@color/green" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/phone"
                        android:textColor="@color/green" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/status"
                        android:textColor="@color/green" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/payment_method"
                        android:textColor="@color/green" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingBottom="18dp">

                    <TextView
                        android:id="@+id/order_familiar_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/green" />

                    <TextView
                        android:id="@+id/order_price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/green" />

                    <TextView
                        android:id="@+id/order_HungryEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/green" />

                    <TextView
                        android:id="@+id/order_quantity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/green" />

                    <TextView
                        android:id="@+id/order_total"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/green" />

                    <TextView
                        android:id="@+id/phone_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/green" />

                    <TextView
                        android:id="@+id/order_status"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAllCaps="false"
                        android:textColor="@color/green" />

                    <TextView
                        android:id="@+id/Order_Type_payment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAllCaps="false"
                        android:textColor="@color/green" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/cooking_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/border"
                    android:backgroundTint="@color/brawn"
                    android:text="@string/cooking"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/size_text_small" />

                <Button
                    android:id="@+id/Order_Accept"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/border"
                    android:backgroundTint="@color/green"
                    android:text="@string/on_the_way"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/size_text_small" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/completedBTN"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/border"
                    android:backgroundTint="#F29727"
                    android:text="@string/completed"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/size_text_small" />

                <Button
                    android:id="@+id/Order_Cancel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/border"
                    android:backgroundTint="@color/red"
                    android:text="@string/cancel"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/size_text_small" />

            </LinearLayout>

            <Button
                android:id="@+id/open_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/border"
                android:text="@string/open_location"
                android:textAllCaps="false"
                android:textColor="@color/green"
                android:textSize="20sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>