<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/custome_dialog_background"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_editor_absoluteX="20dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/payment_by_visa"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/creditCard_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_credit_card_number"
            app:hintTextColor="@color/gray">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/creditCard_ET_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/expiry_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_expiry_date_mm_yy"
            app:hintTextColor="@color/gray">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Expiry_ET_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/CVV_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_cvv"
            app:hintTextColor="@color/gray">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pass_ET_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="3" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/paymentButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/green"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:text="@string/make_payment"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />



    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

