<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/custome_diloge">

       <ImageButton
        android:id="@+id/up_down"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:background="@android:color/transparent"
        android:src="@drawable/baseline_remove_24"
        tools:ignore="RtlHardcoded"  />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="viewStart"
            android:text="@string/add_from_use"
            android:padding="8dp"
            android:textColor="@color/green"
            android:layout_marginStart="12dp"
            android:layout_marginTop="5dp"
            android:textStyle="bold"
            android:textSize="18sp" />

    <RadioGroup
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <RadioButton
            android:id="@+id/gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gallery"
            android:textColor="@color/green"
            android:layout_marginStart="30dp"
            android:textSize="@dimen/size_text_small"/>
        <RadioButton
            android:id="@+id/camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/camera"
            android:textColor="@color/green"
            android:layout_marginStart="30dp"
            android:textSize="@dimen/size_text_small"/>

    </RadioGroup>
 </LinearLayout>

